<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/title"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/NameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/name"
        android:singleLine="true" />

    <EditText
        android:id="@+id/AgeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/age"
        android:inputType="numberSigned"
        android:singleLine="true" />

    <EditText
        android:id="@+id/CityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/city"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/save"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/FetchButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/fetch_data"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/DeleteButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/delete"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/NameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <TextView
        android:id="@+id/AgeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

    <TextView
        android:id="@+id/CityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />

</LinearLayout>